--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -6,13 +6,65 @@
     <PackageType>MSBuildSdk</PackageType>
     <PackageTags>MSBuild MSBuildSdk</PackageTags>
     <IncludeSymbols>false</IncludeSymbols>
+    <BeforePack>
+      _BuildSdkItems;
+      $(BeforePack);
+    </BeforePack>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(ProjectType)' == 'SdkProject' ">
-    <None Include="Sdk\**" Pack="true" PackagePath="Sdk\" />
+    <AvailableItemName Include="SdkItem" />
+    <SdkItem Include="Sdk\**\*.props" />
+    <SdkItem Include="Sdk\**\*.targets" />
   </ItemGroup>
 
   <!-- Dogfooding -->
   <Import Project="$(MSBuildThisFileDirectory)src\YoloDev.Sdk\Sdk\Sdk.targets" />
+
+  <Target Name="_PrepareSdkItems" Condition="'@(SdkItem->Count())' > 0">
+
+    <PropertyGroup>
+      <_SdkItemsDir>$([System.IO.Path]::GetFullPath('Sdk\'))</_SdkItemsDir>
+      <SdkItemsIntermediateOutputPath>$(IntermediateOutputPath)sdk\</SdkItemsIntermediateOutputPath>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <_SdkItem Include="@(SdkItem)">
+        <RelativePath>$([MSBuild]::MakeRelative($(_SdkItemsDir), '%(SdkItem.FullPath)'))</RelativePath>
+        <TargetPath>$(SdkItemsIntermediateOutputPath)%(_SdkItem.RelativePath)</TargetPath>
+      </_SdkItem>
+
+      <SdkItem Remove="@(SdkItem)" />
+      <SdkItem Include="@(_SdkItem)" />
+    </ItemGroup>
+
+    <RemoveDir Directories="$(SdkItemsIntermediateOutputPath)" Condition="Exists('$(SdkItemsIntermediateOutputPath)')" />
+  </Target>
+
+  <Target Name="_UpdateSdkItems" Inputs="@(SdkItem)" Outputs="%(SdkItem.TargetPath)">
+
+    <Error Text="The file '%(SdkItem.Identity)' is located outside the Sdk folder '$(_SdkItemsDir)'" Code="YOLOSDK0001"
+           Condition="$([System.String]::new('%(SdkItem.RelativePath)').StartsWith('..'))" />
+
+    <Error Text="The file '%(SdkItem.Identity)' could not be found" Code="YOLOSDK0002"
+           Condition="!Exists('%(SdkItem.FullPath)')" />
+
+    <PropertyGroup>
+      <FileContent>$([System.IO.File]::ReadAllText('%(SdkItem.FullPath)'))</FileContent>
+      <FileContent>$(FileContent.Replace('$$VERSION$$', '$(PackageVersion)'))</FileContent>
+    </PropertyGroup>
+
+     <WriteLinesToFile File="%(SdkItem.TargetPath)" Lines="$(FileContent)" Overwrite="true" />
+  </Target>
+
+  <Target Name="_BuildSdkItems" Condition="'@(SdkItem->Count())' > 0" DependsOnTargets="_PrepareSdkItems;_UpdateSdkItems">
+
+    <ItemGroup>
+      <_PackageFiles Include="@(SdkItem -> '%(TargetPath)')" PackagePath="Sdk\">
+        <BuildAction>None</BuildAction>
+      </_PackageFiles>
+    </ItemGroup>
+
+  </Target>
 
 </Project>
