--- a/src/YoloDev.Sdk/Sdk/Sdk.targets
+++ b/src/YoloDev.Sdk/Sdk/Sdk.targets
@@ -1,5 +1,7 @@
 <Project>
 
+  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" Condition="'$(_YoloDevSdkImportsMicrosoftNetSdk)' == 'true'" />
+
   <Import Project="$(MSBuildThisFileDirectory)Root.targets" />
   <Import Project="$(MSBuildThisFileDirectory)GitVersion.targets" />
   <Import Project="$(MSBuildThisFileDirectory)SourceLink.targets" />
