--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,15 @@ jobs:
         with:
           useConfigFile: true
 
-      - name: 🔽 Restore
-        run: dotnet restore -p:Configuration=Release
-        env:
-          GitVersion_SemVer: ${{ steps.gitversion.outputs.fullSemVer }}
-          GitVersion_AssemblyVer: ${{ steps.gitversion.outputs.assemblySemFileVer }}
-          GitVersion_Informational: ${{ steps.gitversion.outputs.informationalVersion }}
+      # - name: 🔽 Restore
+      #   run: dotnet restore -p:Configuration=Release
+      #   env:
+      #     GitVersion_SemVer: ${{ steps.gitversion.outputs.fullSemVer }}
+      #     GitVersion_AssemblyVer: ${{ steps.gitversion.outputs.assemblySemFileVer }}
+      #     GitVersion_Informational: ${{ steps.gitversion.outputs.informationalVersion }}
 
       - name: 🔨 Build
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build --configuration Release
         env:
           GitVersion_SemVer: ${{ steps.gitversion.outputs.fullSemVer }}
           GitVersion_AssemblyVer: ${{ steps.gitversion.outputs.assemblySemFileVer }}
