--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         env:
           ACTIONS_RUNNER_DEBUG: 'true'
+          ACTIONS_STEP_DEBUG: 'true'
 
       - name: 🔽 Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.10
