Add source and refs embedding to RsolynAnalyzer SDK

--- a/src/YoloDev.Sdk.RoslynAnalyzer/Sdk/Sdk.props
+++ b/src/YoloDev.Sdk.RoslynAnalyzer/Sdk/Sdk.props
@@ -7,9 +7,7 @@
 
   <Import Sdk="YoloDev.Sdk" Project="Sdk.props" Version="$$VERSION$$" Condition="'$(_YoloDevSdkRoslynAnalyzerImportsYoloDevSdk)' == 'true'" />
 
-  <!-- <Import Project="$(MSBuildThisFileDirectory)Root.props" />
-  <Import Project="$(MSBuildThisFileDirectory)GitVersion.props" />
-  <Import Project="$(MSBuildThisFileDirectory)SourceLink.props" />
-  <Import Project="$(MSBuildThisFileDirectory)Artifacts.props" /> -->
+  <Import Project="$(MSBuildThisFileDirectory)ProjectProperties.props" />
+  <Import Project="$(MSBuildThisFileDirectory)EmbeddedSources.props" />
 
 </Project>
