--- a/sample/src/RoslynAnalyzer.WithEmbeddedSources/RoslynAnalyzer.WithEmbeddedSources.csproj
+++ b/sample/src/RoslynAnalyzer.WithEmbeddedSources/RoslynAnalyzer.WithEmbeddedSources.csproj
@@ -1,5 +1,2 @@
-<Project>
-  <Import Sdk="YoloDev.Sdk.RoslynAnalyzer" Project="Sdk.props" Version="$(YoloDevSdkVersion)" />
-
-  <Import Sdk="YoloDev.Sdk.RoslynAnalyzer" Project="Sdk.targets" Version="$(YoloDevSdkVersion)" />
+<Project Sdk="YoloDev.Sdk.RoslynAnalyzer/$(YoloDevSdkVersion)">
 </Project>
