--- a/sample/NuGet.config
+++ b/sample/NuGet.config
@@ -4,6 +4,6 @@
     <add key="globalPackagesFolder" value=".packages" />
   </config>
   <packageSources>
-    <add key="local" value="..\artifacts\nuget\" />
+    <add key="local" value="../artifacts/nuget/" />
   </packageSources>
 </configuration>
