Add source and refs embedding to RsolynAnalyzer SDK (#2)
* Add source and refs embedding to RsolynAnalyzer SDK

* Build samples on CI

* Add step emoji

* Use unix-like paths

* Test on multiple operating systems

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,14 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
 
     env:
       DOTNET_NOLOGO: 'true'
@@ -46,14 +53,20 @@ jobs:
       - name: 📦 Pack
         run: dotnet pack --configuration Release --no-build
 
+      - name: 🧪 Test (build samples)
+        run: dotnet build -p:YoloDevSdkVersion=${{ steps.gitversion.outputs.fullSemVer }}
+        working-directory: sample
+
       - name: 🔼 Upload packages as artifact
         uses: actions/upload-artifact@v2
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         with:
           name: nuget
           path: artifacts/nuget/
 
       - name: 🔼 Upload global.json as artifact
         uses: actions/upload-artifact@v2
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         with:
           name: global-json
           path: global.json
