--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
-name: Deploy
+name: Release
 
 on:
   workflow_run:
     workflows: [CI]
-    branches: [main, ci/deploy]
+    branches: [main]
     types: [completed]
 
 jobs:
