--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,33 +7,67 @@ on:
     types: [completed]
 
 jobs:
-  publish:
-    name: Publish
+  build:
+    name: Build
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    environment: nuget
-    needs:
-      - build
+    # environment: nuget
 
     steps:
-      - name: 🔽 Download nuget artifact
-        uses: dawidd6/action-download-artifact@v2
+      - name: ⏬ Checkout
+        uses: actions/checkout@v2
         with:
-          workflow: ci.yml
-          run_id: ${{github.event.workflow_run.id }}
-          name: nuget
-          path: '.'
+          fetch-depth: 0
+          ref: ${{ github.event.workflow_run.head_sha }}
 
-      - name: 🔽 Download global.json artifact
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          workflow: ci.yml
-          run_id: ${{github.event.workflow_run.id }}
-          name: global-json
-          path: '.'
+      - name: 🔧 Setup git
+        run: git branch -D main || true; git checkout -b main
 
       - name: 🔽 Install dotnet
         uses: actions/setup-dotnet@v1
+
+      - name: 🔽 Install GitVersion
+        uses: gittools/actions/gitversion/setup@v0.9.10
+        with:
+          versionSpec: '5.x'
+
+      - name: 🔍 Print dotnet info
+        run: dotnet --info
+
+      - name: 🔍 Determine Version
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.10
+        with:
+          useConfigFile: true
+
+      - name: 🔽 Restore
+        run: dotnet restore -p:Configuration=Release
+
+      - name: 🔨 Build
+        run: dotnet build --configuration Release
+
+      - name: 📦 Pack
+        run: dotnet pack --configuration Release --no-build
+
+      - name: 📝 Create changelog
+        id: build_changelog
+        uses: mikepenz/release-changelog-builder-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🔼 Upload packages as artifact
+        uses: actions/upload-artifact@v2
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        with:
+          name: nuget
+          path: artifacts/nuget/
+
+      - name: 🔼 Upload global.json as artifact
+        uses: actions/upload-artifact@v2
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        with:
+          name: global-json
+          path: global.json
 
       # - name: 🔼 Publish package to nuget
       #   run: dotnet nuget push --force-english-output --api-key '${{ secrets.NUGET_API_KEY }}' --source '${{ secrets.NUGET_FEED }}' --skip-duplicate "*.nupkg"
