--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,7 +50,7 @@ jobs:
         run: dotnet pack --configuration Release --no-build
 
       - name: 📝 Create changelog
-        id: build_changelog
+        id: changelog
         uses: mikepenz/release-changelog-builder-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -69,5 +69,29 @@ jobs:
           name: global-json
           path: global.json
 
+    outputs:
+      version: ${{ steps.gitversion.outputs.fullSemVer }}
+      changelog: ${{ steps.changelog.outputs.changelog }}
+
+  release:
+    name: Create Release
+    runs-on: ubuntu-latest
+    needs:
+      - build
+
+    steps:
+      - name: 🔽 Download nuget artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: nuget
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          prerelease: true
+          tag_name: v${{ needs.build.outputs.version }}
+          body: ${{ needs.build.outputs.changelog }}
+          files: |
+            *.nupkg
       # - name: 🔼 Publish package to nuget
       #   run: dotnet nuget push --force-english-output --api-key '${{ secrets.NUGET_API_KEY }}' --source '${{ secrets.NUGET_FEED }}' --skip-duplicate "*.nupkg"
