--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,8 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     needs:
       - build
 
@@ -82,6 +84,7 @@ jobs:
       - name: 🏷️ Create GitHub Tag
         uses: actions/github-script@v4
         with:
+          github-token: ${{ secrets. }}
           script: |
             github.git.createRef({
               owner: context.repo.owner,
