--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,11 +76,6 @@ jobs:
       - build
 
     steps:
-      - name: 🔽 Download nuget artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: nuget
-
       - name: 🏷️ Create GitHub Tag
         uses: actions/github-script@v4
         with:
@@ -92,11 +87,22 @@ jobs:
               sha: "${{ github.event.workflow_run.head_sha }}",
             });
 
+      - name: ⏬ Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: refs/tags/v${{ needs.build.outputs.version }}
+
       - name: 📝 Create changelog
         id: changelog
         uses: mikepenz/release-changelog-builder-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 🔽 Download nuget artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: nuget
+          path: nuget
 
       - name: 🖃 Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -105,6 +111,6 @@ jobs:
           tag_name: v${{ needs.build.outputs.version }}
           body: ${{ needs.build.outputs.changelog }}
           files: |
-            *.nupkg
+            nuget/*.nupkg
       # - name: 🔼 Publish package to nuget
       #   run: dotnet nuget push --force-english-output --api-key '${{ secrets.NUGET_API_KEY }}' --source '${{ secrets.NUGET_FEED }}' --skip-duplicate "*.nupkg"
