Set concurrency limits on nuget deploys

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -146,6 +146,9 @@ jobs:
     name: Push to Nuget
     runs-on: ubuntu-latest
     environment: nuget
+    concurrency:
+      group: nuget
+      cancel-in-progress: true
     needs:
       - build
       - release
