--- a/src/YoloDev.Sdk/Sdk/Sdk.props
+++ b/src/YoloDev.Sdk/Sdk/Sdk.props
@@ -10,6 +10,7 @@
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" Condition="'$(_YoloDevSdkImportsMicrosoftNetSdk)' == 'true'" />
 
   <Import Project="$(MSBuildThisFileDirectory)Root.props" />
+  <Import Project="$(MSBuildThisFileDirectory)ProjectProps.props" />
   <Import Project="$(MSBuildThisFileDirectory)GitVersion.props" />
   <Import Project="$(MSBuildThisFileDirectory)SourceLink.props" />
   <Import Project="$(MSBuildThisFileDirectory)Artifacts.props" />
