--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,19 +30,8 @@ jobs:
       - name: 🔽 Install dotnet
         uses: actions/setup-dotnet@v1
 
-      - name: 🔽 Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.11
-        with:
-          versionSpec: '5.x'
-
       - name: 🔍 Print dotnet info
         run: dotnet --info
-
-      - name: 🔍 Determine Version
-        id: gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.11
-        with:
-          useConfigFile: true
 
       - name: 🔽 Restore
         run: dotnet restore -p:Configuration=Release
@@ -57,16 +46,16 @@ jobs:
         run: dotnet build -p:YoloDevSdkVersion=${{ steps.gitversion.outputs.fullSemVer }}
         working-directory: sample
 
-      - name: 🔼 Upload packages as artifact
-        uses: actions/upload-artifact@v2
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        with:
-          name: nuget
-          path: artifacts/nuget/
+      # - name: 🔼 Upload packages as artifact
+      #   uses: actions/upload-artifact@v2
+      #   if: ${{ matrix.os == 'ubuntu-latest' }}
+      #   with:
+      #     name: nuget
+      #     path: artifacts/nuget/
 
-      - name: 🔼 Upload global.json as artifact
-        uses: actions/upload-artifact@v2
-        if: ${{ matrix.os == 'ubuntu-latest' }}
-        with:
-          name: global-json
-          path: global.json
+      # - name: 🔼 Upload global.json as artifact
+      #   uses: actions/upload-artifact@v2
+      #   if: ${{ matrix.os == 'ubuntu-latest' }}
+      #   with:
+      #     name: global-json
+      #     path: global.json
