--- a/release-please-config.json
+++ b/release-please-config.json
@@ -20,6 +20,8 @@
     { "type": "deps", "section": "Dependencies" }
   ],
   "packages": {
-    ".": {}
+    ".": {
+      "package-name": "YoloDev.Sdk"
+    }
   }
 }
