--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      # Always run main branch builds to completion.
+      fail-fast: ${{ github.event_name == 'pull_request' ||
+        (github.ref != 'refs/heads/main' &&
+        !startsWith(github.ref, 'refs/tags/')) }}
       matrix:
         os:
           - ubuntu-latest
