feat: add `PackageReleaseChannel` property
BREAKING CHANGE: this removes support for the `VersionTxtReleaseType` property, instead use `PackageReleaseChannel`.

--- a/src/YoloDev.Sdk/Sdk/Version.props
+++ b/src/YoloDev.Sdk/Sdk/Version.props
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <NoWarn>$(NoWarn);NU5105;CS7035;CS1591</NoWarn>
     <VersionTxtEnable Condition="'$(GitVersionEnable)' == ''">true</VersionTxtEnable>
-    <VersionTxtForcePrerelease Condition="'$(GitVersionForcePrerelease)' == ''">false</VersionTxtForcePrerelease>
+    <PackageReleaseChannel Condition="'$(PackageReleaseChannel)' == ''">stable</PackageReleaseChannel>
     <VersionTxtPath>$(ProjectRootPath)version.txt</VersionTxtPath>
   </PropertyGroup>
 
