--- a/src/YoloDev.Sdk/Sdk/ProjectProps.props
+++ b/src/YoloDev.Sdk/Sdk/ProjectProps.props
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
 </Project>
